@@ -1,4 +1,4 @@
-/* $OpenBSD: includes.h,v 1.47 2006/07/09 15:15:10 stevesk Exp $ */
+/* $OpenBSD: includes.h,v 1.48 2006/07/10 16:37:36 stevesk Exp $ */
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -20,12 +20,10 @@
 
 #define _GNU_SOURCE /* activate extra prototypes for glibc */
 
-#include <stdarg.h>
 #include <stdio.h>
 #include <errno.h>
 #include <stdlib.h>
 #include <string.h>
-#include <stdarg.h>
 #include <time.h>
 #include <stddef.h>
 
