@@ -1,4 +1,4 @@
-/* $OpenBSD: log.c,v 1.32 2006/07/08 23:30:06 stevesk Exp $ */
+/* $OpenBSD: log.c,v 1.33 2006/07/10 16:37:36 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -36,6 +36,7 @@
 
 #include "includes.h"
 
+#include <stdarg.h>
 #include <syslog.h>
 #if defined(HAVE_STRNVIS) && defined(HAVE_VIS_H)
 # include <vis.h>
