@@ -1,4 +1,4 @@
-/* $OpenBSD: ssh-keyscan.c,v 1.65 2006/07/08 21:47:12 stevesk Exp $ */
+/* $OpenBSD: ssh-keyscan.c,v 1.66 2006/07/10 16:37:36 stevesk Exp $ */
 /*
  * Copyright 1995, 1996 by David Mazieres <dm@lcs.mit.edu>.
  *
@@ -11,6 +11,7 @@
  
 #include "openbsd-compat/sys-queue.h"
 #include <sys/resource.h>
+#include <stdarg.h>
 
 #include <openssl/bn.h>
 
